final touches to clean some csv files

--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -9,15 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "number_of_deaths = pd.read_csv(\"clean data/2018_deaths_clean.csv\") # good\n",
-    "hotline_calls = pd.read_csv(\"Semi-Clean Data/county hotline calls.csv\") # Not cleaned enough\n",
-    "drug_boxes = pd.read_csv(\"Semi-Clean Data/drug_boxes_by_county.csv\") # Almost cleaned\n",
+    "hotline_calls = pd.read_csv(\"Clean Data/county_hotline_calls_2018.csv\") # good\n",
+    "drug_boxes = pd.read_csv(\"Clean Data/drug_boxes_by_county.csv\") # good\n",
     "pa_population = pd.read_csv(\"clean data/PA_population_clean.csv\") # good\n",
     "od_deaths = pd.read_csv(\"clean data/OD_Deaths_Cleaned_More.csv\") # good\n",
     "emergency_od_visits = pd.read_csv(\"Semi-Clean Data/cleaned_od_ed_visits_2018.csv\") # Unclear Column names, needs more cleaning"
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>county_name</th>\n",
+       "      <th>County</th>\n",
        "      <th>death_count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -84,7 +84,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    county_name  death_count\n",
+       "         County  death_count\n",
        "0  Pennsylvania       134571\n",
        "1         Adams         1055\n",
        "2     Allegheny        14051\n",
@@ -92,7 +92,7 @@
        "4        Beaver         2185"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -127,17 +127,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>County Name</th>\n",
-       "      <th>2017</th>\n",
+       "      <th>County</th>\n",
        "      <th>2018</th>\n",
-       "      <th>Jan17</th>\n",
-       "      <th>Feb17</th>\n",
-       "      <th>Mar17</th>\n",
-       "      <th>Apr17</th>\n",
-       "      <th>May17</th>\n",
-       "      <th>Jun17</th>\n",
-       "      <th>Jul17</th>\n",
-       "      <th>...</th>\n",
+       "      <th>Jan18</th>\n",
+       "      <th>Feb18</th>\n",
        "      <th>Mar18</th>\n",
        "      <th>Apr18</th>\n",
        "      <th>May18</th>\n",
@@ -154,16 +147,9 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Adams</td>\n",
-       "      <td>35.0</td>\n",
        "      <td>27.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>...</td>\n",
        "      <td>4.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>4.0</td>\n",
@@ -178,16 +164,9 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Allegheny</td>\n",
-       "      <td>1049.0</td>\n",
        "      <td>1003.0</td>\n",
-       "      <td>130.0</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>116.0</td>\n",
-       "      <td>105.0</td>\n",
-       "      <td>111.0</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>...</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>77.0</td>\n",
        "      <td>99.0</td>\n",
        "      <td>122.0</td>\n",
        "      <td>93.0</td>\n",
@@ -202,16 +181,9 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Armstrong</td>\n",
-       "      <td>29.0</td>\n",
        "      <td>22.0</td>\n",
-       "      <td>8.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -226,16 +198,9 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Beaver</td>\n",
-       "      <td>129.0</td>\n",
        "      <td>121.0</td>\n",
-       "      <td>17.0</td>\n",
        "      <td>11.0</td>\n",
        "      <td>12.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>...</td>\n",
        "      <td>9.0</td>\n",
        "      <td>15.0</td>\n",
        "      <td>12.0</td>\n",
@@ -250,16 +215,9 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Bedford</td>\n",
-       "      <td>27.0</td>\n",
        "      <td>12.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
@@ -273,35 +231,25 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 27 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  County Name    2017    2018  Jan17  Feb17  Mar17  Apr17  May17  Jun17  \\\n",
-       "0       Adams    35.0    27.0    3.0    3.0    3.0    2.0    3.0    2.0   \n",
-       "1   Allegheny  1049.0  1003.0  130.0   67.0  116.0  105.0  111.0   79.0   \n",
-       "2   Armstrong    29.0    22.0    8.0    1.0    1.0    1.0    2.0    0.0   \n",
-       "3      Beaver   129.0   121.0   17.0   11.0   12.0   11.0   13.0    9.0   \n",
-       "4     Bedford    27.0    12.0    4.0    0.0    3.0    2.0    2.0    2.0   \n",
+       "      County    2018  Jan18  Feb18  Mar18  Apr18  May18  Jun18  Jul18  Aug18  \\\n",
+       "0      Adams    27.0    1.0    2.0    4.0    0.0    4.0    3.0    3.0    0.0   \n",
+       "1  Allegheny  1003.0   71.0   77.0   99.0  122.0   93.0   58.0   95.0   69.0   \n",
+       "2  Armstrong    22.0    1.0    3.0    3.0    0.0    0.0    2.0    1.0    0.0   \n",
+       "3     Beaver   121.0   11.0   12.0    9.0   15.0   12.0    9.0    7.0   10.0   \n",
+       "4    Bedford    12.0    2.0    0.0    0.0    1.0    2.0    3.0    0.0    1.0   \n",
        "\n",
-       "   Jul17  ...  Mar18  Apr18  May18  Jun18  Jul18  Aug18  Sep18  Oct18  Nov18  \\\n",
-       "0    5.0  ...    4.0    0.0    4.0    3.0    3.0    0.0    2.0    5.0    1.0   \n",
-       "1  100.0  ...   99.0  122.0   93.0   58.0   95.0   69.0   57.0   89.0   57.0   \n",
-       "2    1.0  ...    3.0    0.0    0.0    2.0    1.0    0.0    2.0    3.0    2.0   \n",
-       "3   18.0  ...    9.0   15.0   12.0    9.0    7.0   10.0    5.0    9.0    9.0   \n",
-       "4    2.0  ...    0.0    1.0    2.0    3.0    0.0    1.0    2.0    1.0    0.0   \n",
-       "\n",
-       "   Dec18  \n",
-       "0    2.0  \n",
-       "1  116.0  \n",
-       "2    5.0  \n",
-       "3   13.0  \n",
-       "4    0.0  \n",
-       "\n",
-       "[5 rows x 27 columns]"
+       "   Sep18  Oct18  Nov18  Dec18  \n",
+       "0    2.0    5.0    1.0    2.0  \n",
+       "1   57.0   89.0   57.0  116.0  \n",
+       "2    2.0    3.0    2.0    5.0  \n",
+       "3    5.0    9.0    9.0   13.0  \n",
+       "4    2.0    1.0    0.0    0.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +284,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>County</th>\n",
        "      <th>Number Boxes</th>\n",
        "    </tr>\n",
@@ -344,31 +291,26 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>Adams</td>\n",
        "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>Allegheny</td>\n",
        "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>Armstrong</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>Beaver</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>Bedford</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
@@ -377,15 +319,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0     County  Number Boxes\n",
-       "0           0      Adams            11\n",
-       "1           1  Allegheny            38\n",
-       "2           2  Armstrong             9\n",
-       "3           3     Beaver            16\n",
-       "4           4    Bedford             4"
+       "      County  Number Boxes\n",
+       "0      Adams            11\n",
+       "1  Allegheny            38\n",
+       "2  Armstrong             9\n",
+       "3     Beaver            16\n",
+       "4    Bedford             4"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
