--- a/Data Cleaning Notebooks/AW Data Cleaning.ipynb
+++ b/Data Cleaning Notebooks/AW Data Cleaning.ipynb
@@ -157,7 +157,7 @@
     "import numpy as np\n",
     "\n",
     "#import original csv\n",
-    "drug_boxes = pd.read_csv(\"original data pulls/Drug_Take_Back_Boxes.csv\")\n",
+    "drug_boxes = pd.read_csv(\"../Original Data Pulls/Drug_Take_Back_Boxes.csv\")\n",
     "\n",
     "#get headers\n",
     "drug_boxes.head()"
@@ -208,92 +208,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py:4025: SettingWithCopyWarning: \n",
+      "C:\\Users\\megam\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:4025: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
       "  return super(DataFrame, self).rename(**kwargs)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>County</th>\n",
-       "      <th>Number Boxes</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Adams</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Allegheny</td>\n",
-       "      <td>38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Armstrong</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Beaver</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Bedford</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      County  Number Boxes\n",
-       "0      Adams            11\n",
-       "1  Allegheny            38\n",
-       "2  Armstrong             9\n",
-       "3     Beaver            16\n",
-       "4    Bedford             4"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "#save as df we can use to merge etc\n",
     "drug_boxes_by_county = count_by_county[[\"County\", \"Zip Code\"]]\n",
     "drug_boxes_by_county.rename(columns = {'Zip Code':'Number Boxes'}, inplace = True) \n",
-    "drug_boxes_by_county.head()"
+    "drug_boxes_by_county.head()\n",
+    "drug_boxes_by_county = drug_boxes_by_county.set_index(\"County\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -422,13 +355,13 @@
        "4   POINT (-78.349076871 40.4855502384)  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hotline = pd.read_csv(\"original data pulls/Hotline intakes.csv\")\n",
+    "hotline = pd.read_csv(\"../Original Data Pulls/Hotline intakes.csv\")\n",
     "hotline.head()\n",
     "\n",
     "#change date column so easier to use syntax-wise\n",
@@ -439,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +495,7 @@
        "4   POINT (-78.349076871 40.4855502384)   17     4  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +520,7 @@
        "array(['19', '17', '18', '16'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +604,7 @@
        "Name: total_intakes, Length: 68, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +690,7 @@
        "Name: total_intakes, Length: 68, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +775,7 @@
        "Name: total_intakes, Length: 68, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +860,7 @@
        "Name: total_intakes, Length: 68, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +947,7 @@
        "Bedford        27.0    12.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1125,7 @@
        "Bedford        6.0    1.0    0.0    5.0    0.0  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1381,7 +1314,7 @@
        "Bedford        1.0    0.0    0.0  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,7 +1347,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "county_hotline_calls = pd.merge(months2017, months2018, on=\"County Name\")\n",
+    "county_hotline_calls_2018 = county_hotline_calls.drop(columns=['2017', 'Jan17', 'Feb17', 'Mar17', 'Apr17', 'May17', 'Jun17','Jul17', 'Aug17', 'Sep17', 'Oct17', 'Nov17', 'Dec17'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1438,17 +1381,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>2017</th>\n",
        "      <th>2018</th>\n",
-       "      <th>Jan17</th>\n",
-       "      <th>Feb17</th>\n",
-       "      <th>Mar17</th>\n",
-       "      <th>Apr17</th>\n",
-       "      <th>May17</th>\n",
-       "      <th>Jun17</th>\n",
-       "      <th>Jul17</th>\n",
-       "      <th>Aug17</th>\n",
-       "      <th>...</th>\n",
+       "      <th>Jan18</th>\n",
+       "      <th>Feb18</th>\n",
        "      <th>Mar18</th>\n",
        "      <th>Apr18</th>\n",
        "      <th>May18</th>\n",
@@ -1461,15 +1396,7 @@
        "      <th>Dec18</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>County Name</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>County</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -1488,17 +1415,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Adams</th>\n",
-       "      <td>35.0</td>\n",
        "      <td>27.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>5.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>4.0</td>\n",
@@ -1512,17 +1431,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Allegheny</th>\n",
-       "      <td>1049.0</td>\n",
        "      <td>1003.0</td>\n",
-       "      <td>130.0</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>116.0</td>\n",
-       "      <td>105.0</td>\n",
-       "      <td>111.0</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>101.0</td>\n",
-       "      <td>...</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>77.0</td>\n",
        "      <td>99.0</td>\n",
        "      <td>122.0</td>\n",
        "      <td>93.0</td>\n",
@@ -1536,17 +1447,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Armstrong</th>\n",
-       "      <td>29.0</td>\n",
        "      <td>22.0</td>\n",
-       "      <td>8.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>...</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1560,17 +1463,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Beaver</th>\n",
-       "      <td>129.0</td>\n",
        "      <td>121.0</td>\n",
-       "      <td>17.0</td>\n",
        "      <td>11.0</td>\n",
        "      <td>12.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>...</td>\n",
        "      <td>9.0</td>\n",
        "      <td>15.0</td>\n",
        "      <td>12.0</td>\n",
@@ -1584,17 +1479,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Bedford</th>\n",
-       "      <td>27.0</td>\n",
        "      <td>12.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
@@ -1608,56 +1495,56 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 26 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "               2017    2018  Jan17  Feb17  Mar17  Apr17  May17  Jun17  Jul17  \\\n",
-       "County Name                                                                    \n",
-       "Adams          35.0    27.0    3.0    3.0    3.0    2.0    3.0    2.0    5.0   \n",
-       "Allegheny    1049.0  1003.0  130.0   67.0  116.0  105.0  111.0   79.0  100.0   \n",
-       "Armstrong      29.0    22.0    8.0    1.0    1.0    1.0    2.0    0.0    1.0   \n",
-       "Beaver        129.0   121.0   17.0   11.0   12.0   11.0   13.0    9.0   18.0   \n",
-       "Bedford        27.0    12.0    4.0    0.0    3.0    2.0    2.0    2.0    2.0   \n",
+       "             2018  Jan18  Feb18  Mar18  Apr18  May18  Jun18  Jul18  Aug18  \\\n",
+       "County                                                                      \n",
+       "Adams        27.0    1.0    2.0    4.0    0.0    4.0    3.0    3.0    0.0   \n",
+       "Allegheny  1003.0   71.0   77.0   99.0  122.0   93.0   58.0   95.0   69.0   \n",
+       "Armstrong    22.0    1.0    3.0    3.0    0.0    0.0    2.0    1.0    0.0   \n",
+       "Beaver      121.0   11.0   12.0    9.0   15.0   12.0    9.0    7.0   10.0   \n",
+       "Bedford      12.0    2.0    0.0    0.0    1.0    2.0    3.0    0.0    1.0   \n",
        "\n",
-       "             Aug17  ...  Mar18  Apr18  May18  Jun18  Jul18  Aug18  Sep18  \\\n",
-       "County Name         ...                                                    \n",
-       "Adams          1.0  ...    4.0    0.0    4.0    3.0    3.0    0.0    2.0   \n",
-       "Allegheny    101.0  ...   99.0  122.0   93.0   58.0   95.0   69.0   57.0   \n",
-       "Armstrong      5.0  ...    3.0    0.0    0.0    2.0    1.0    0.0    2.0   \n",
-       "Beaver         9.0  ...    9.0   15.0   12.0    9.0    7.0   10.0    5.0   \n",
-       "Bedford        6.0  ...    0.0    1.0    2.0    3.0    0.0    1.0    2.0   \n",
-       "\n",
-       "             Oct18  Nov18  Dec18  \n",
-       "County Name                       \n",
-       "Adams          5.0    1.0    2.0  \n",
-       "Allegheny     89.0   57.0  116.0  \n",
-       "Armstrong      3.0    2.0    5.0  \n",
-       "Beaver         9.0    9.0   13.0  \n",
-       "Bedford        1.0    0.0    0.0  \n",
-       "\n",
-       "[5 rows x 26 columns]"
+       "           Sep18  Oct18  Nov18  Dec18  \n",
+       "County                                 \n",
+       "Adams        2.0    5.0    1.0    2.0  \n",
+       "Allegheny   57.0   89.0   57.0  116.0  \n",
+       "Armstrong    2.0    3.0    2.0    5.0  \n",
+       "Beaver       5.0    9.0    9.0   13.0  \n",
+       "Bedford      2.0    1.0    0.0    0.0  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "county_hotline_calls = pd.merge(months2017, months2018, on=\"County Name\")\n",
-    "county_hotline_calls.head()\n"
+    "county_hotline_calls_2018 = county_hotline_calls_2018.reset_index()\n",
+    "county_hotline_calls_2018 = county_hotline_calls_2018.rename(columns= {'County Name': 'County'})\n",
+    "county_hotline_calls_2018 = county_hotline_calls_2018.set_index('County')\n",
+    "county_hotline_calls_2018 = county_hotline_calls_2018.drop(columns=['index'])\n",
+    "\n",
+    "county_hotline_calls_2018.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
     "#export to csv\n",
-    "county_hotline_calls.to_csv(\"clean data/county hotline calls.csv\")"
+    "county_hotline_calls_2018.to_csv(\"county_hotline_calls_2018.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
