--- a/Data Cleaning Notebooks/Death Data Cleaning.ipynb
+++ b/Data Cleaning Notebooks/Death Data Cleaning.ipynb
@@ -16,18 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"original data pulls/all_types_of_death.csv\")"
+    "df = pd.read_csv(\"../original data pulls/all_types_of_death.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "4  Pennsylvania        2004  final       126602"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "98        Beaver        2018  projected         2185"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "Name: type, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,16 +239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "finished_deaths_df = finished_deaths_df.set_index('county_name')"
+    "finished_deaths_df = finished_deaths_df.rename(columns={'county_name':'County'})\n",
+    "finished_deaths_df = finished_deaths_df.set_index('County')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +276,7 @@
        "      <th>death_count</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>county_name</th>\n",
+       "      <th>County</th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -306,7 +307,7 @@
       ],
       "text/plain": [
        "              death_count\n",
-       "county_name              \n",
+       "County                   \n",
        "Pennsylvania       134571\n",
        "Adams                1055\n",
        "Allegheny           14051\n",
@@ -314,7 +315,7 @@
        "Beaver               2185"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,11 +328,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "finished_deaths_df.to_csv(\"clean data/2018_deaths_clean.csv\")"
+    "finished_deaths_df.to_csv(\"../clean data/2018_deaths_clean.csv\")"
    ]
   },
   {
